test/analyzer/input_programs/invalid_programs/program20.tea
# Valid assignment to declared variable
# with proper type
a := 7
a = 14 * 10

# Valid assignment to declared variable
# with proper type
b := "hello"
b = "goodbye"

# Valid assignment to declared variable
# with proper type
c := true
c = false

# Invalid assignment to undeclared variable

d = "won't work"